fixed title spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -1175,7 +1175,7 @@ body {
   }
 
   .about {
-    min-height: 100vh;
+    min-height: 85vh;
     justify-content: center;
     align-items: center;
   }
